# ktx2

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.tpl  deny.toml  release.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
data/: basic_texture.ktx2  fb.ktx2  norm.ktx2  test_tex.ktx2
examples/: async_load.rs  load.rs
src/: enums.rs  error.rs  format.rs  lib.rs
