[package]
name = "ktx2-reader"
version = "0.1.0"
authors = ["f3kilo <f3kilo@yandex.ru>"]
edition = "2018"
repository = "https://github.com/F3kilo/ktx2-reader"
description = "Asynchronously read, validate and parse KTX v.2 texture files"
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.5"
byteorder = "1.3.4"

[dependencies.tokio]
version = "0.2.22"
features = ["rt-core", "fs"]

[dev-dependencies.tokio]
version = "0.2.22"
features = ["rt-core", "fs", "macros"]
